--- a/first-app/package.json
+++ b/first-app/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "sass": "^1.54.8",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
